04_OOD/example/oop/DesignPrinciples/src/com/schonherz/education/oop/design/principles/clazz/solid/ocp/drawing/good/Circle.java
package com.schonherz.education.oop.design.principles.clazz.solid.ocp.drawing.good;

/**
 * Implementation of drawing circle
 * 
 * @author Janos Pelsoczi
 * 
 */
public class Circle extends Shape {
	@Override
	public void draw() {
		System.out.println("Drawing circle");
	}
}