04_OOD/example/oop/DesignPrinciples/src/com/schonherz/education/oop/design/principles/clazz/solid/ocp/drawing/bad/GraphicEditorTestDrive.java
package com.schonherz.education.oop.design.principles.clazz.solid.ocp.drawing.bad;

/**
 * Implementation of drawing editor
 * 
 * @author Janos Pelsoczi
 *
 */
public class GraphicEditorTestDrive {

	public static void main(String[] args) {
		GraphicEditor ge = new GraphicEditor();

		Shape s = new Rectangle();
		ge.drawShape(s);

		s = new Circle();
		ge.drawShape(s);
	}

}
